# pixelEditor

./: CMakeLists.txt  README.md
include/: canvas.h  kutuphane.h
src/: canvas.cpp  kutuphane.cpp  main.cpp
